tests/transpiler/x/pas/dataset_sort_take_limit.error
compile: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /workspace/mochi/tests/transpiler/x/pas/dataset_sort_take_limit.pas
dataset_sort_take_limit.pas(13,17) Error: Identifier not found "name"
dataset_sort_take_limit.pas(13,21) Fatal: Syntax error, ")" expected but ":" found
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
